5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1593_1801.log
== TEST (2019-03-26 11:01:55) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
print(z*y x*y)
-- ERROR:
File "XXXX", line 4
    print(z*y x*y)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:20) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y x*y)
print(total)
-- ERROR:
File "XXXX", line 4
    total=(z*y x*y)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:57) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y+x*y)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:04:45) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y+x*y)
print(total)
-- EXECUTION TIME:
0.260585
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    z=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:49) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y+x*y)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:05:22) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y+x*y)
print(total)
-- EXECUTION TIME:
0.131281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    z=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:26) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y+x*y)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:50) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=(z*y)+(x*y)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:06:15) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z=input("abra")
total=((z*y)+(x*y))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:09:30) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z="Abra"
total=(z+x)*y
print(total)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:24) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z="Abra"
total=(z" "+x)*y
print(total)
-- ERROR:
File "XXXX", line 4
    total=(z" "+x)*y
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:37) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z="Abra"
total=(z" "x)*y
print(total)
-- ERROR:
File "XXXX", line 4
    total=(z" "x)*y
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:55) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z="Abra"

print((z " "+x)*y)
-- ERROR:
File "XXXX", line 5
    print((z " "+x)*y)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:47) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z="Abra"

print((z+ " "+x+" ")*y)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:13:20) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticao: "))
z="Abra"

print((z+ " "+x+" ")*y)
-- EXECUTION TIME:
0.200081
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:40) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
z= Abra
print((z+" "+x)*y

-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:52) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
z= Abra
print((z+" "+x)*y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z= Abra
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:26) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
z=Abra
print((z+" "+x)*y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=Abra
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:50) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
z=abra
print((z+" "+x)*y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:58:52) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
print(Abra+x)*y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra+x)*y
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:59:44) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
b= abra
print(b+" "+x)*y

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b= abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:00:45) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
b= abra.
print(b+" "+x)*y

-- ERROR:
File "XXXX", line 3
    b= abra.
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:01:05) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
b=abra.
print(b+" "+x)*y

-- ERROR:
File "XXXX", line 3
    b=abra.
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:01:57) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
b=abra
print(b+" "+x" ")*y

-- ERROR:
File "XXXX", line 4
    print(b+" "+x" ")*y
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:02:35) 
-- CODE:
x=input("nome do objeto: ")
y=input("numero de repeticoes: ")
b=(abra)
print((b+" "+x" ")*y)

-- ERROR:
File "XXXX", line 4
    print((b+" "+x" ")*y)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:04:00) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticoes: ")
b=Abra
print((b+" "+x" ")*y)

-- ERROR:
File "XXXX", line 3
    b=Abra
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:04:12) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticoes: ")
b= Abra
print((b+" "+x" ")*y)

-- ERROR:
File "XXXX", line 3
    b= Abra
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:04:28) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticoes: "))
b= Abra
print((b+" "+x" ")*y)

-- ERROR:
File "XXXX", line 4
    print((b+" "+x" ")*y)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:04:55) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticoes: "))
b= Abra
print((b+" "+x)*y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b= Abra
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:12:13) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticoes: "))
b = abra
print((b+" "+x)*y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:12:41) 
-- CODE:
x=input("nome do objeto: ")
y=int(input("numero de repeticoes: "))
b = fecha
print((b+" "+x)*y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = fecha
NameError: name 'fecha' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
